sourcecode/ChatRoom/local_package.csx/roles/WebRole1/approot/server.js.logs/0.txt
   [36minfo  -[39m socket.io started

C:\node\AzureNodeChatClient\sourcecode\ChatRoom\WebRole1\azureStorageHelper.js:23
        RowKey: uuid.v1(); ,
                         ^

node.js:201
        throw e; // process.nextTick error, or 'error' event on first tick
              ^
SyntaxError: Unexpected token ;
    at Module._compile (module.js:427:25)
    at Object..js (module.js:450:10)
    at Module.load (module.js:351:31)
    at Function._load (module.js:310:12)
    at Module.require (module.js:357:17)
    at require (module.js:368:17)
    at Object.<anonymous> (C:\node\AzureNodeChatClient\sourcecode\ChatRoom\WebRole1\server.js:6:26)
    at Module._compile (module.js:432:26)
    at Object..js (module.js:450:10)
    at Module.load (module.js:351:31)
